Bug 1013587 - HTTP cache v2: Start preload on input stream open for existing entries, r=michal